--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
   "author": "Sokcheanith(codewithmecoder)",
   "license": "MIT",
   "scripts": {
-    "test": "jest --detectOpenHandles",
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
+    "docker:up": "docker-compose up -d --remove-orphans",
+    "docker:down": "docker-compose down",
+    "docker:up:test": "docker-compose -f ./docker-compose-develop.yml up -d",
+    "docker:down:test": "docker-compose -f ./docker-compose-develop.yml down",
+    "test": "yarn docker:up:test && yarn prisma migrate deploy && jest --passWithNoTests",
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "prod": "tsc && node build/src/app.js",
+    "seeding": "ts-node-dev --respawn --transpileOnly prisma/seed.ts",
+    "migrate": "prisma migrate dev --name"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -17,18 +24,19 @@
     "@types/node": "^18.8.3",
     "@types/supertest": "^2.0.12",
     "jest": "^29.1.2",
+    "pino": "^8.7.0",
+    "pino-pretty": "^9.1.1",
+    "prisma": "^4.5.0",
     "supertest": "^6.3.0",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.5.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "pino": "^8.6.1",
-    "pino-pretty": "^9.1.1",
-    "zod": "^3.19.1"
+    "express": "^4.18.2"
   }
 }
