--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.1.2",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/lodash": "^4.14.186",
     "@types/node": "^18.8.3",
     "@types/supertest": "^2.0.12",
     "jest": "^29.1.2",
@@ -42,6 +43,7 @@
     "dayjs": "^1.11.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21"
   }
 }
