--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "docker:up:test": "docker-compose -f ./docker-compose-develop.yml up -d",
     "docker:down:test": "docker-compose -f ./docker-compose-develop.yml down",
     "test": "yarn docker:up:test && yarn prisma migrate deploy && jest --passWithNoTests",
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --exit-child --watch src src/app.ts",
     "prod": "tsc && node build/src/app.js",
     "seeding": "ts-node-dev --respawn --transpileOnly prisma/seed.ts",
     "prisma:migrate": "prisma migrate dev --name",
