--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "@types/lodash": "^4.14.186",
     "@types/node": "^18.8.3",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "jest": "^29.1.2",
     "pino": "^8.7.0",
     "pino-pretty": "^9.1.1",
     "prisma": "^4.5.0",
     "supertest": "^6.3.0",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
