remove port from env file

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:unt@3456@203.189.135.161:5432/HappyQuiz?schema=public"
-PORT="3000"
+# PORT="3000"
 ORIGIN="http://localhost:8080"
 ACCESSTOKENTIMETOLIVE="15m"
 REFRESHTOKENTIMETOLIVE="1y"
