--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "docker:up:test": "docker-compose -f ./docker-compose-develop.yml up -d",
     "docker:down:test": "docker-compose -f ./docker-compose-develop.yml down",
     "test": "yarn docker:up:test && yarn prisma migrate deploy && jest --passWithNoTests",
-    "start": "ts-node-dev --respawn --transpile-only --exit-child --watch src src/app.ts",
+    "dev": "ts-node-dev --respawn --transpile-only --exit-child --watch src src/app.ts",
     "prod": "node build/src/app.js",
-    "build": "tsc",
+    "postinstall": "tsc",
+    "start": "node build/src/app.js",
     "seeding": "ts-node-dev --respawn --transpileOnly prisma/seed.ts",
     "prisma:migrate": "prisma migrate dev --name",
     "prisma:generate": "prisma generate"
@@ -38,7 +39,9 @@
     "supertest": "^6.3.0",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0",
-    "ts-jest": "^29.0.3"
+    "ts-jest": "^29.0.3",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4"
   },
   "dependencies": {
     "@prisma/client": "^4.6.1",
@@ -49,27 +52,6 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.21",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.4",
-    "@types/bcrypt": "^5.0.0",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.14",
-    "@types/jest": "^29.1.2",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/lodash": "^4.14.186",
-    "@types/node": "^18.8.3",
-    "@types/supertest": "^2.0.12",
-    "@types/swagger-jsdoc": "^6.0.1",
-    "@types/swagger-ui-express": "^4.1.3",
-    "jest": "^29.1.2",
-    "pino": "^8.7.0",
-    "pino-pretty": "^9.1.1",
-    "prisma": "^4.6.1",
-    "supertest": "^6.3.0",
-    "swagger-jsdoc": "^6.2.5",
-    "swagger-ui-express": "^4.5.0",
-    "ts-jest": "^29.0.3"
+    "lodash": "^4.17.21"
   }
 }
