--- a/package.json
+++ b/package.json
@@ -33,15 +33,11 @@
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "jest": "^29.1.2",
-    "pino": "^8.7.0",
-    "pino-pretty": "^9.1.1",
     "prisma": "^4.6.1",
     "supertest": "^6.3.0",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0",
-    "ts-jest": "^29.0.3",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.8.4"
+    "ts-jest": "^29.0.3"
   },
   "dependencies": {
     "@prisma/client": "^4.6.1",
@@ -52,6 +48,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "pino": "^8.7.0",
+    "pino-pretty": "^9.1.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4"
   }
 }
