--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 
 DATABASE_URL="postgresql://postgres:unt@3456@203.189.135.161:5432/HappyQuiz?schema=public"
 # PORT="3000"
-ORIGIN="http://localhost:8080"
+ORIGIN="http://localhost:8080,http://localhost:8880"
 ACCESSTOKENTIMETOLIVE="15m"
 REFRESHTOKENTIMETOLIVE="1y"
 SALTWORKFACTOR="10"
