--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,9 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-# build/Release
+build/Release
+build/
+build
 
 # Dependency directories
 node_modules/
